[project]
name = "rbiotechsalarydb"
version = "0.1.0"
description = "For setting up database for rbiotechsalary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-postgresql>=1.8.0",
    "logging>=0.4.9.6",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
]
